--- a/index.html
+++ b/index.html
@@ -4,3 +4,4 @@
 <p>create login feature(button)</p>
 <p>this is new feature for the new branch(button)</p>
 <p>this is signup feature(button)</p>
+<p>logout</p>
